Fix horizontal scroll bug

--- a/frontend/src/components/list/style/CommonStyle.module.css
+++ b/frontend/src/components/list/style/CommonStyle.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin: 40px;
+  margin: 40px 0px;
   width: 90%;
   padding: 0 40px 20px;
 }
